[package]
name = "msdb"
version = "0.4.0"
description = "A MaSsive-data orientated DataBase"
repository = "https://example.com"
readme = "README.md"
license = "GPL3"
keywords = ["database"]
categories = ["database"]
authors = ["moelife-coder <61054382+moelife-coder@users.noreply.github.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.5"
rpassword = "4.0.3"
rand = "0.7.3"
hex = "0.4.1"
rustyline = "6.0.0"
clap = "2.33.0"