[package]
name = "msdb"
version = "0.4.0"
description = "Mobile Secure DataBase"
repository = "https://github.com/moelife-coder/msdb"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["database"]
categories = ["database"]
authors = ["moelife-coder <61054382+moelife-coder@users.noreply.github.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.5"
rpassword = "4.0.3"
rand = "0.7.3"
hex = "0.4.1"
rustyline = "6.0.0"
clap = "2.33.0"